<resources>
    <string name="app_name">Berpasangan</string>
    <string name="string_main_activity_title">Berpasangan</string>
    <string name="string_main_activity_subtitle">Semua ada pasangannya.</string>
    <string name="string_main_activity_start_button">Mulai</string>
    <string name="string_main_activity_statistic_button">Statistik</string>
    <string name="string_main_activity_extra_button">Ekstra</string>
    <string name="string_main_activity_setting_button">Pengaturan</string>
    <string name="string_main_activity_exit_button">Keluar</string>
    <string name="string_main_activity_exit_prompt">Apakah Anda yakin ingin keluar?</string>
    <string name="string_main_activity_exit_prompt_title">Keluar</string>
    <string name="string_main_activity_exit_prompt_positive">Ya</string>
    <string name="string_main_activity_exit_prompt_negative">Tidak</string>
    <string name="string_main_activity_select_level_message">Silahkan pilih ukuran tile untuk memulai permainan :</string>
    <string name="string_main_activity_select_level_title">Pilih Ukuran Tile</string>
    <string name="string_extra_dialog_description">Silahkan pilih bagian yang ingin kamu lihat :</string>
    <string name="string_extra_dialog_subtitle_1">Ensiklopedia</string>
    <string name="string_extra_dialog_subtitle_2">Toko</string>
    <string name="setting_dialog_description">Pengaturan</string>
    <string name="setting_dialog_sound">Efek Suara</string>
    <string name="setting_dialog_tutorial">Tutorial</string>
    <string name="string_board_fragment_time_remaining">Sisa waktu :</string>
    <string name="string_board_fragment_time_pause_title">Berpasangan</string>
    <string name="string_board_fragment_time_pause">Permainan dihentikan sementara.</string>
    <string name="string_board_fragment_time_resume">Lanjutkan</string>
    <string name="string_board_fragment_timeout_title">Game Over!</string>
    <string name="string_board_fragment_timeout_message">Waktu Anda telah habis. Permainan usai!</string>
    <string name="string_board_fragment_finish_title">Selamat!</string>
    <string name="string_board_fragment_finish_message">Anda berhasil menyelesaikan permainan.</string>
    <string name="string_board_fragment_finish_positive">Lihat Skor Akhir</string>
    <string name="string_board_fragment_timeout_positive">Lihat Skor Akhir</string>
    <string name="string_result_fragment_title">Hasil Akhir</string>
    <string name="string_result_fragment_correct_hint">Jumlah Benar</string>
    <string name="string_result_fragment_correct_result">%1$d dari %2$d</string>
    <string name="string_result_fragment_accuracy_hint">Akurasi</string>
    <string name="string_result_fragment_accuracy_result">%.1f%%</string>
    <string name="string_result_fragment_time_left_hint">Sisa Waktu</string>
    <string name="string_result_fragment_time_left_result">%1$d detik</string>
    <string name="string_result_fragment_score_hint">Total Skor</string>
    <string name="string_result_fragment_coin_hint">Koin Diperoleh</string>
    <string name="string_result_fragment_high_score_hint">Daftar Skor</string>
    <string name="string_result_fragment_main_menu_hint">Tutup</string>
    <string name="string_stats_fragment_name">Statistik</string>
    <string name="string_stats_fragment_average_score_hint">Skor Rata-Rata</string>
    <string name="string_stats_fragment_average_score">%.1f</string>
    <string name="string_stats_fragment_average_accuracy_hint">Akurasi Rata-Rata</string>
    <string name="string_stats_fragment_average_accuracy">%.2f%%</string>
    <string name="string_stats_fragment_encyclopedia_unlocked_hint">Entri Ensiklopedia Terbuka</string>
    <string name="string_stats_fragment_encyclopedia_read_hint">Entri Ensiklopedia Dibaca</string>
    <string name="string_stats_fragment_play_duration_hint">Durasi Bermain</string>
    <string name="string_stats_fragment_play_duration">%1$d jam\n%2$d menit</string>
    <string name="string_stats_fragment_play_duration_no_hour">%1$d menit</string>
    <string name="string_stats_fragment_coin_spent_hint">Koin Digunakan</string>
    <string name="string_store_fragment_encyclopedia_tile">ENTRI ENSIKLOPEDIA</string>
    <string name="string_store_fragment_card_tile">LATAR TILE</string>
    <string name="string_store_fragment_board_tile">LATAR PAPAN</string>
    <string name="string_result_fragment_highscore_dialog">Selamat! Skor kamu masuk Daftar Skor Tertinggi.\n Silahkan pilih salah satu avatar di bawah :</string>
    <string name="string_highscore_fragment_name">5 Skor Tertinggi</string>
    <string name="string_highscore_fragment_no_data">Belum ada data skor tersimpan</string>
    <string name="string_achievement_fragment_name">Pencapaian</string>
    <string name="pref_username">username</string>
    <string name="pref_first_login">first_login</string>
    <string name="pref_userid">userid</string>
    <string name="pref_warmup">warmup</string>
    <string name="pref_superhero">superhero</string>
    <string name="pref_memory">memory</string>
    <string name="pref_fan">fan</string>
    <string name="pref_coins">coins</string>
    <string name="pref_accuracy">accuracy</string>
    <string name="pref_duration">duration</string>
    <string name="pref_tutorial">tutorial</string>
    <string name="pref_sound_switch">sound_switch</string>
    <string name="tutorial_title_1">Berpasangan</string>
    <string name="tutorial_desc_1">Selamat datang di tutorial. Di sini akan dijelaskan mengenai cara bermain Berpasangan.</string>
    <string name="tutorial_title_2">Pilih Tile</string>
    <string name="tutorial_desc_2">Ada 3 pilihan jumlah tile. Jumlah tile berbanding lurus dengan durasi yang diberikan.</string>
    <string name="tutorial_title_3">Pasangkan</string>
    <string name="tutorial_desc_3">Pasangkan tile monumen dengan tile negara asalnya. Hati-hati dengan batasan waktu yang diberikan.</string>
    <string name="tutorial_title_4">Hasil Akhir</string>
    <string name="tutorial_desc_4">Di akhir sesi game, kamu akan mendapat skor akhir dan koin. Besarnya bergantung jumlah tile yang match, akurasi, dan sisa waktu.</string>
    <string name="tutorial_title_5">Leaderboard</string>
    <string name="tutorial_desc_5">Do your best dan pastikan kamulah yang merajai seluruh Leaderboard Berpasangan!</string>
    <string name="tutorial_title_6">Let\'s Play!</string>
    <string name="tutorial_desc_6">Mainkan Berpasangan sekarang, dan kumpulkan semua achievement yang ada!</string>
</resources>
