<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_vertical"
    style="@style/style_wrap_content">

    <TextView
        android:id="@+id/id_extra_dialog_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/string_extra_dialog_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_extra_dialog_image_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/drawable_encyclopedia"/>

            <TextView
                android:id="@+id/id_extra_dialog_text_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/string_extra_dialog_subtitle_1"/>

        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/color_grey_2"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_extra_dialog_image_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/drawable_store"/>

            <TextView
                android:id="@+id/id_extra_dialog_text_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/string_extra_dialog_subtitle_2"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>